sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:7: error: reassignment to val
                                               if(blol<amin){a=b}}
                                                              ^